metadata/force-app/main/default/objects/CustomName_JJEFW__c/CustomName_JJEFW__c.object-meta.xml
<CustomObject>
    <description>Description_xUoKI</description>
    <label>CustomLabel_tPseB</label>
    <nameField>
        <label>CustomLabel_tPseB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_tPseBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>