metadata/force-app/main/default/objects/CustomName_JJEFW__c/fields/CustomField_jAqru__c.field-meta.xml
<CustomField>
    <fullName>CustomField_jAqru__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldtilEz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>