metadata/force-app/main/default/objects/CustomName_JJEFW__c/fields/CustomField_wRYJG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wRYJG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldOmfsW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>